crates/aranya-policy-lang/tests/data/invalid_this/enum_variant.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: err
---
error: Reserved identifier
  |
1 | enum A { this }
  |          ^^^^ found reserved identifier: `this`
